# mstar

./: .buildinfo  .gitignore  .sample.env  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  adding_models.html  api.html  architecture.html  clients.html  environment_variables.html  genindex.html  index.html  installation.html  models.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  serving.html
.doctrees/: adding_models.doctree  api.doctree  architecture.doctree  clients.doctree  environment_variables.doctree  index.doctree  installation.doctree  models.doctree  quickstart.doctree  serving.doctree
.doctrees/_autosummary/: mstar.api_server.doctree  mstar.api_server.media_io.doctree  mstar.api_server.openai.adapters.doctree  mstar.api_server.openai.doctree  mstar.api_server.openai.protocol.doctree  mstar.api_server.openai.router.doctree  mstar.api_server.openai.serving_chat.doctree  mstar.api_server.openai.serving_images.doctree  mstar.api_server.openai.serving_speech.doctree  mstar.api_server.openai.serving_videos.doctree  mstar.api_server.request_types.doctree  mstar.communication.communicator.doctree  mstar.communication.doctree  mstar.communication.event.doctree  mstar.conductor.doctree  mstar.engine.doctree  mstar.graph.base.doctree  mstar.graph.doctree  mstar.graph.graph_io.doctree  mstar.graph.loop_indices.doctree  mstar.graph.special_destinations.doctree  mstar.model.cosmos3.components.doctree  mstar.model.cosmos3.components.packing.doctree  mstar.model.cosmos3.components.sound_tokenizer.doctree  mstar.model.cosmos3.config.doctree  mstar.model.cosmos3.constants.doctree  mstar.model.cosmos3.doctree  mstar.model.cosmos3.loader.doctree  mstar.model.cosmos3.tests.doctree  mstar.model.cosmos3.tests.pipeline.doctree  mstar.model.cosmos3.tests.test_engine_cache.doctree  mstar.model.doctree  mstar.model.higgs_audio.components.doctree  mstar.model.higgs_audio.config.doctree  mstar.model.higgs_audio.doctree  mstar.model.orpheus.components.doctree  mstar.model.orpheus.config.doctree  mstar.model.orpheus.doctree  mstar.model.pi05.components.doctree  mstar.model.pi05.components.flow_matching.doctree  (+25 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_model.yml
.github/workflows/: ci.yml  docs.yml  rust.yml
_autosummary/: mstar.api_server.html  mstar.api_server.media_io.html  mstar.api_server.openai.adapters.html  mstar.api_server.openai.html  mstar.api_server.openai.protocol.html  mstar.api_server.openai.router.html  mstar.api_server.openai.serving_chat.html  mstar.api_server.openai.serving_images.html  mstar.api_server.openai.serving_speech.html  mstar.api_server.openai.serving_videos.html  mstar.api_server.request_types.html  mstar.communication.communicator.html  mstar.communication.event.html  mstar.communication.html  mstar.conductor.html  mstar.engine.html  mstar.graph.base.html  mstar.graph.graph_io.html  mstar.graph.html  mstar.graph.loop_indices.html  mstar.graph.special_destinations.html  mstar.model.cosmos3.components.html  mstar.model.cosmos3.components.packing.html  mstar.model.cosmos3.components.sound_tokenizer.html  mstar.model.cosmos3.config.html  mstar.model.cosmos3.constants.html  mstar.model.cosmos3.html  mstar.model.cosmos3.loader.html  mstar.model.cosmos3.tests.html  mstar.model.cosmos3.tests.pipeline.html  mstar.model.cosmos3.tests.test_engine_cache.html  mstar.model.higgs_audio.components.html  mstar.model.higgs_audio.config.html  mstar.model.higgs_audio.html  mstar.model.html  mstar.model.orpheus.components.html  mstar.model.orpheus.config.html  mstar.model.orpheus.html  mstar.model.pi05.components.flow_matching.html  mstar.model.pi05.components.html  (+25 more)
_modules/: index.html
_sources/: adding_models.rst  installation.rst
_sources/_autosummary/: mstar.api_server.media_io.rst  mstar.api_server.openai.adapters.rst  mstar.api_server.openai.protocol.rst  mstar.api_server.openai.router.rst  mstar.api_server.openai.rst  mstar.api_server.openai.serving_chat.rst  mstar.api_server.openai.serving_images.rst  mstar.api_server.openai.serving_speech.rst  mstar.api_server.openai.serving_videos.rst  mstar.api_server.request_types.rst  mstar.api_server.rst  mstar.communication.communicator.rst  mstar.communication.event.rst  mstar.communication.rst  mstar.conductor.rst  mstar.engine.rst  mstar.graph.base.rst  mstar.graph.graph_io.rst  (+47 more)
benchmark/: asr_eval.py  base.py  dataset.py  download_pi05_ckpt.py  openpi_instructions.md  request.py  run_asr_benchmark.sh  run_benchmark.sh  runner.py  sglang_whisper_eval.py  utils.py  vjepa2_repo_ac.py  vllm_omni_instructions.md
configs/: bagel.yaml  bagel_cfg_parallel.yaml  cosmos3_droid.yaml  cosmos3_nano.yaml  cosmos3_nano_sp2.yaml  cosmos3_nano_sp4.yaml  cosmos3_nano_tp2.yaml  cosmos3_nano_tp2_sp2.yaml  cosmos3_nano_tp4.yaml  cosmos3_super_tp2.yaml  cosmos3_super_tp2_sp2.yaml  cosmos3_super_tp4.yaml  higgs_audio.yaml  kimi_k2_7.yaml  ming_flash_omni.yaml  ming_flash_omni_thinker_only.yaml  ming_flash_omni_thinker_only_tp4.yaml  orpheus.yaml  orpheus_colocated.yaml  orpheus_tp2.yaml  pi05.yaml  pi05_droid.yaml  qwen3omni.yaml  qwen3omni_2gpu_dpenc.yaml  qwen3omni_talker_codec_colocated.yaml  qwen3omni_talker_pd_disag.yaml  qwen3tts.yaml  vjepa2.yaml  vjepa2_ac.yaml  wan22.yaml  whisper_large.yaml  zonos2.yaml  zonos2_colocated.yaml
docs/: adding_models.rst  api.rst  architecture.rst  clients.rst  conf.py  environment_variables.rst  index.rst  installation.rst  models.rst  quickstart.rst  serving.rst
examples/: openai_tts.py  sdk_tts.py
mminf/: ipc_formats.py
perf_testing/: chunked_prefill_smoke.py  chunked_prefill_throughput.py  offline_homogenous.sh
results/: vllm_bagel_T2I_curl.txt
rust/: .gitignore  Cargo.toml  pyproject.toml
rust/server/: Cargo.toml
rust/server/src/: bridge.rs  main.rs  media.rs
rust/src/: communicator.rs  lib.rs  shm.rs
rust/src/core/: graph.rs  mod.rs  sched.rs  walk.rs
test/: benchmark.py  compare.py  conftest.py  sweep.py  test_burst_cap.py  test_request_queues.py
(+877 files in other folders)
