[package]
name = "mstar-rust"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "mstar_rust"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
thiserror = "2"
zmq = "0.10"
pyo3 = { version = "0.23", features = ["extension-module"] }

[dev-dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
