[package]
name = "mstar-rust"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "mstar_rust"
# cdylib: the Python extension module. rlib: the same code as a plain Rust
# library, so other Rust components (servers, services, tools) can consume
# any of this crate's modules directly — typed messaging today, and
# whatever the crate grows to hold — without going through Python.
crate-type = ["cdylib", "rlib"]

[dependencies]
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.3"
thiserror = "2"
zmq = "0.10"
pyo3 = { version = "0.23", features = ["extension-module"] }

[dev-dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
