[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mstar-rust"
version = "0.1.0"
description = "Rust transport for mstar (RFC #130): ZMQ PUSH/PULL mesh with wakeup-fd polling"
requires-python = ">=3.10"

[tool.maturin]
module-name = "mstar_rust"
manifest-path = "Cargo.toml"
