[package]
name = "mstar-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "mstar-server"
path = "src/main.rs"

[dependencies]
# The vendored transport/arena library crate (rust/) — rlib target.
mstar-rust = { path = "..", package = "mstar-rust" }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"
futures = "0.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
serde_bytes = "0.11"
tower-http = { version = "0.5", features = ["cors"] }
ureq = { version = "2", default-features = false, features = ["tls"] }

[profile.release]
opt-level = 3
lto = true
